Replace 1rem with 16px to prevent zooming on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -110,7 +110,7 @@
   outline: none;
   text-align: right;
   font-family: "Cousine", monospace;
-  font-size: 1rem;
+  font-size: 16px;
   font-weight: 400;
   font-style: normal;
   color: var(--black);
@@ -146,7 +146,7 @@
   margin: 0;
   padding: 0;
   font-family: "Cousine", monospace;
-  font-size: 1rem;
+  font-size: 16px;
   font-weight: 700;
   font-style: italic;
 }
@@ -157,7 +157,7 @@
   padding: 0;
   resize: vertical;
   font-family: "Inter", sans-serif;
-  font-size: 1rem;
+  font-size: 16px;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
@@ -171,7 +171,7 @@
   padding: 0;
   white-space: pre-wrap;
   font-family: "Inter", sans-serif;
-  font-size: 1rem;
+  font-size: 16px;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
@@ -229,7 +229,7 @@
 .rotate-device-text {
   display: none;
   font-family: "Cousine", monospace;
-  font-size: 1rem;
+  font-size: 16px;
   font-weight: 400;
   font-style: normal;
 }
